--- a/index.html
+++ b/index.html
@@ -9,11 +9,55 @@
 <body>
     <div class="container">
         <div class="header">
-
+            <div class="searchbar">
+                <div class="top_bar">
+                    <div class="top_left">
+                        <img src="magnify.svg" width="20" height="20">
+                        <input type="text">
+                    </div>
+                    <div class="top_right">
+                        <img src="bell-ring-outline.svg" width="20" height="20">
+                        <img src="face-woman-profile.svg" width="40" height="40">
+                        <h3>Morgan Oakley</h3>
+                    </div>
+                    
+                </div>
+                <div class="bottom_bar">
+                    <img src="face-woman-profile.svg" width="60" height="60">
+                    <div class="profile_name">
+                        <p>Hi there,</p>
+                        <h2>Morgan Oakley (@morgan)</h2>
+                    </div>
+                    <div class="buttons">
+                        <button type="button">New</button>
+                        <button type="button">Upload</button>
+                        <button type="button">Share</button>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="sidebar">
-            <div>Dashboard</div>
+            <div class="dash_title">
+               <h2>Dashboard</h2>
+            </div>
+            <div class="quick_links">
+                <ul>
+                    <li>Home</li>
+                    <li>Profile</li>
+                    <li>Messages</li>
+                    <li>History</li>
+                    <li>Tasks</li>
+                    <li>Communities</li>
+                </ul>
+            </div>
+            <div class="options">
+                <ul>
+                    <li>Settings</li>
+                    <li>Support</li>
+                    <li>Privacy</li>
+                </ul>
+            </div>
         </div>
 
         <div class="main-content">
