--- a/index.html
+++ b/index.html
@@ -9,30 +9,29 @@
 <body>
     <div class="container">
         <div class="header">
-            <div class="searchbar">
-                <div class="top_bar">
-                    <div class="top_left">
-                        <img src="magnify.svg" width="20" height="20">
-                        <input type="text">
-                    </div>
-                    <div class="top_right">
-                        <img src="bell-ring-outline.svg" width="20" height="20">
-                        <img src="face-woman-profile.svg" width="40" height="40">
-                        <h3>Morgan Oakley</h3>
-                    </div>
-                    
+            <div class="top_bar">
+                <div class="top_left">
+                    <img src="magnify.svg" width="25" height="25">
+                    <input type="text">
                 </div>
-                <div class="bottom_bar">
-                    <img src="face-woman-profile.svg" width="60" height="60">
+                <div class="top_right">
+                    <img src="bell-ring-outline.svg" width="25" height="25">
+                    <img src="face-woman-profile.svg" width="50" height="50">
+                    <h3>Morgan Oakley</h3>
+                </div>
+            </div>
+            <div class="bottom_bar">
+                <div class="bottom_left">
+                    <img src="face-woman-profile.svg" width="100" height="100">
                     <div class="profile_name">
                         <p>Hi there,</p>
                         <h2>Morgan Oakley (@morgan)</h2>
                     </div>
-                    <div class="buttons">
-                        <button type="button">New</button>
-                        <button type="button">Upload</button>
-                        <button type="button">Share</button>
-                    </div>
+                </div>
+                <div class="buttons">
+                    <button type="button">New</button>
+                    <button type="button">Upload</button>
+                    <button type="button">Share</button>
                 </div>
             </div>
         </div>
