--- a/index.html
+++ b/index.html
@@ -5,24 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css" defer>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <div class="header">
             <div class="top_bar">
                 <div class="top_left">
-                    <img src="magnify.svg" width="25" height="25">
+                    <img src="svgs/magnify.svg" width="25" height="25">
                     <input type="text">
                 </div>
                 <div class="top_right">
-                    <img src="bell-ring-outline.svg" width="25" height="25">
-                    <img src="face-woman-profile.svg" width="50" height="50">
+                    <img src="svgs/bell-ring-outline.svg" width="25" height="25">
+                    <img src="svgs/face-woman-profile.svg" width="50" height="50">
                     <h3>Morgan Oakley</h3>
                 </div>
             </div>
             <div class="bottom_bar">
                 <div class="bottom_left">
-                    <img src="face-woman-profile.svg" width="100" height="100">
+                    <img src="svgs/face-woman-profile.svg" width="100" height="100">
                     <div class="profile_name">
                         <p>Hi there,</p>
                         <h2>Morgan Oakley (@morgan)</h2>
@@ -38,23 +41,51 @@
 
         <div class="sidebar">
             <div class="dash_title">
+                <img src="svgs/view-dashboard.svg" width="50" height="50" class="filter_white">
                <h2>Dashboard</h2>
             </div>
             <div class="quick_links">
                 <ul>
-                    <li>Home</li>
-                    <li>Profile</li>
-                    <li>Messages</li>
-                    <li>History</li>
-                    <li>Tasks</li>
-                    <li>Communities</li>
+                    <li>
+                        <img src="svgs/home.svg" width="25" height="25" class="filter_white">    
+                        Home
+                    </li>
+                    <li>
+                        <img src="svgs/developer-board.svg" width="25" height="25" class="filter_white">
+                        Profile
+                    </li>
+                    <li>
+                        <img src="svgs/message-reply.svg" width="25" height="25" class="filter_white">
+                        Messages
+                    </li>
+                    <li>
+                        <img src="svgs/history.svg" width="25" height="25" class="filter_white">
+                        History
+                    </li>
+                    <li>
+                        <img src="svgs/calendar-check.svg" width="25" height="25" class="filter_white">
+                        Tasks
+                    </li>
+                    <li>
+                        <img src="svgs/account-group.svg" width="25" height="25" class="filter_white">
+                        Communities
+                    </li>
                 </ul>
             </div>
             <div class="options">
                 <ul>
-                    <li>Settings</li>
-                    <li>Support</li>
-                    <li>Privacy</li>
+                    <li>
+                        <img src="svgs/cog.svg" width="25" height="25" class="filter_white">
+                        Settings
+                    </li>
+                    <li>
+                        <img src="svgs/lifebuoy.svg" width="25" height="25" class="filter_white">
+                        Support
+                    </li>
+                    <li>
+                        <img src="svgs/shield-check.svg" width="25" height="25" class="filter_white">
+                        Privacy
+                    </li>
                 </ul>
             </div>
         </div>
