--- a/index.html
+++ b/index.html
@@ -96,40 +96,106 @@
                 <div class="card">
                     <h3>Super Cool Project</h3>
                     <p>Sed cursus justo ac lacus efficitur, sit amet convallis lectus ultrices. Suspendisse a ipsum non lorem eleifend pulvinar.</p>
+                    <div class="icons">
+                        <img src="svgs/star-plus-outline.svg" width="25" height="25">
+                        <img src="svgs/eye-plus-outline.svg" width="25" height="25">
+                        <img src="svgs/share-variant-outline.svg" width="25" height="25">
+                    </div>
                 </div>
                 <div class="card">
                     <h3>Less Cool Project</h3>
                     <p>Aenean eu felis non nunc pretium lacinia. Phasellus pulvinar sollicitudin nisl et cursus. Nullam a sem sit amet felis pretium hendrerit sed porta erat.</p>
+                    <div class="icons">
+                        <img src="svgs/star-plus-outline.svg" width="25" height="25">
+                        <img src="svgs/eye-plus-outline.svg" width="25" height="25">
+                        <img src="svgs/share-variant-outline.svg" width="25" height="25">
+                    </div>
                 </div>
                     <div class="card">
                     <h3>Impossible App</h3>
                     <p>Integer mollis neque vitae nibh sagittis euismod. Proin tempor in augue sit amet mattis. Proin nulla ante, dictum non porta et, molestie nec elit.</p>
+                    <div class="icons">
+                        <img src="svgs/star-plus-outline.svg" width="25" height="25">
+                        <img src="svgs/eye-plus-outline.svg" width="25" height="25">
+                        <img src="svgs/share-variant-outline.svg" width="25" height="25">
+                    </div>                
                 </div>
                     <div class="card">
                     <h3>Easy Peasy App</h3>
                     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam mauris risus, posuere id rhoncus quis, sagittis ac mauris. Mauris nec gravida dui.</p>
+                    <div class="icons">
+                        <img src="svgs/star-plus-outline.svg" width="25" height="25">
+                        <img src="svgs/eye-plus-outline.svg" width="25" height="25">
+                        <img src="svgs/share-variant-outline.svg" width="25" height="25">
+                    </div>
                 </div>
                     <div class="card">
                     <h3>Ad Blocker</h3>
                     <p>Mauris tincidunt lorem ac dui ultricies, vel pellentesque erat vulputate. Donec sollicitudin mauris a odio blandit, sed porta nisl maximus. Mauris fermentum porttitor sodales. Donec facilisis hendrerit semper. Etiam vitae lectus id purus volutpat placerat.</p>
+                    <div class="icons">
+                        <img src="svgs/star-plus-outline.svg" width="25" height="25">
+                        <img src="svgs/eye-plus-outline.svg" width="25" height="25">
+                        <img src="svgs/share-variant-outline.svg" width="25" height="25">
+                    </div>
                 </div>
                     <div class="card">
                     <h3>Money Maker</h3>
                     <p>Fusce luctus erat ut vehicula condimentum. Mauris urna ipsum, posuere at erat at, pellentesque elementum diam. In ultrices ultrices consectetur.</p>
+                    <div class="icons">
+                        <img src="svgs/star-plus-outline.svg" width="25" height="25">
+                        <img src="svgs/eye-plus-outline.svg" width="25" height="25">
+                        <img src="svgs/share-variant-outline.svg" width="25" height="25">
+                    </div>
                 </div>
             </div>
-            <div class="announcements">
-                <div class="ann_card">
-                    Site Maintenance
-                    <p>Praesent commodo eu arcu eu eleifend. Donec neque tellus, auctor quis finibus vestibulum, ullamcorper sit amet magna.</p>
+        
+            <div class="side_wrapper">
+                <div class="announcements">
+                    <div class="main_titles">Announcements</div>
+                    <div class="ann_card">
+                        Site Maintenance
+                        <p>Praesent commodo eu arcu eu eleifend. Donec neque tellus, auctor quis finibus vestibulum, ullamcorper sit amet magna.</p>
+                    </div>
+                    <div class="ann_card">
+                        Community Share Day
+                        <p> Curabitur lacinia venenatis mauris, at sollicitudin velit rutrum quis. Donec lectus risus, tincidunt faucibus metus in, dignissim ultricies mauris.</p>
+                    </div>
+                    <div class="ann_card">
+                        Updated Privacy Policy
+                        <p>Nam accumsan sapien libero. Proin tellus turpis, sollicitudin tincidunt congue ac, ultrices eu est. Donec at ex tristique, posuere justo et, porta nibh.</p>
+                    </div>
                 </div>
-                <div class="ann_card">
-                    Community Share Day
-                    <p> Curabitur lacinia venenatis mauris, at sollicitudin velit rutrum quis. Donec lectus risus, tincidunt faucibus metus in, dignissim ultricies mauris.</p>
-                </div>
-                <div class="ann_card">
-                    Updated Privacy Policy
-                    <p>Nam accumsan sapien libero. Proin tellus turpis, sollicitudin tincidunt congue ac, ultrices eu est. Donec at ex tristique, posuere justo et, porta nibh.</p>
+
+                <div class="trending">
+                    <div class="main_titles">Trending</div>
+                    <div class="trend_card">
+                        <img src="svgs/dog.svg" width="50" height="50">
+                        <div class="at">
+                            <h4>@tegan</h4>
+                            <p>World Peace Builder</p>
+                        </div>
+                    </div>                
+                    <div class="trend_card">
+                        <img src="svgs/face-woman-profile.svg" width="50" height="50">
+                        <div class="at">
+                            <h4>@morgan</h4>
+                            <p>Super Cool Project</p>
+                        </div>
+                    </div>
+                    <div class="trend_card">
+                        <img src="svgs/chart-donut.svg" width="50" height="50">
+                        <div class="at">
+                            <h4>@kendall</h4>
+                            <p>Life Changing App</p>
+                        </div>
+                    </div>
+                    <div class="trend_card">
+                        <img src="svgs/heart-broken-outline.svg" width="50" height="50">
+                        <div class="at">
+                            <h4>@alex</h4>
+                            <p>No Traffic Maker</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
