Add announcements card + shadows to all cards and header

--- a/index.html
+++ b/index.html
@@ -152,17 +152,21 @@
             <div class="side_wrapper">
                 <div class="announcements">
                     <div class="main_titles">Announcements</div>
-                    <div class="ann_card">
-                        Site Maintenance
-                        <p>Praesent commodo eu arcu eu eleifend. Donec neque tellus, auctor quis finibus vestibulum, ullamcorper sit amet magna.</p>
-                    </div>
-                    <div class="ann_card">
-                        Community Share Day
-                        <p> Curabitur lacinia venenatis mauris, at sollicitudin velit rutrum quis. Donec lectus risus, tincidunt faucibus metus in, dignissim ultricies mauris.</p>
-                    </div>
-                    <div class="ann_card">
-                        Updated Privacy Policy
-                        <p>Nam accumsan sapien libero. Proin tellus turpis, sollicitudin tincidunt congue ac, ultrices eu est. Donec at ex tristique, posuere justo et, porta nibh.</p>
+                    <div class="ann_wrapper">
+                        <div class="ann_card">
+                            <h4>Site Maintenance</h4>
+                            <p>Praesent commodo eu arcu eu eleifend. Donec neque tellus, auctor quis finibus vestibulum, ullamcorper sit amet magna.</p>
+                        </div>
+                        <div class="line"></div>
+                        <div class="ann_card">
+                            <h4>Community Share Day</h4>
+                            <p> Curabitur lacinia venenatis mauris, at sollicitudin velit rutrum quis. Donec lectus risus, tincidunt faucibus metus in, dignissim ultricies mauris.</p>
+                        </div>
+                        <div class="line"></div>
+                        <div class="ann_card">
+                            <h4>Updated Privacy Policy</h4>
+                            <p>Nam accumsan sapien libero. Proin tellus turpis, sollicitudin tincidunt congue ac, ultrices eu est. Donec at ex tristique, posuere justo et, porta nibh.</p>
+                        </div>
                     </div>
                 </div>
 
