Add trending styling + remove comments + adjust dashboard spacing

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="sidebar">
             <div class="dash_title">
                 <img src="svgs/view-dashboard.svg" width="50" height="50" class="filter_white">
-               <h2>Dashboard</h2>
+                <h2>Dashboard</h2>
             </div>
             <div class="quick_links">
                 <ul>
@@ -93,58 +93,60 @@
         <div class="main-content">
             <div class="projects">
                 <div class="main_titles">Your Projects</div>
-                <div class="card">
-                    <h3>Super Cool Project</h3>
-                    <p>Sed cursus justo ac lacus efficitur, sit amet convallis lectus ultrices. Suspendisse a ipsum non lorem eleifend pulvinar.</p>
-                    <div class="icons">
-                        <img src="svgs/star-plus-outline.svg" width="25" height="25">
-                        <img src="svgs/eye-plus-outline.svg" width="25" height="25">
-                        <img src="svgs/share-variant-outline.svg" width="25" height="25">
-                    </div>
-                </div>
-                <div class="card">
-                    <h3>Less Cool Project</h3>
-                    <p>Aenean eu felis non nunc pretium lacinia. Phasellus pulvinar sollicitudin nisl et cursus. Nullam a sem sit amet felis pretium hendrerit sed porta erat.</p>
-                    <div class="icons">
-                        <img src="svgs/star-plus-outline.svg" width="25" height="25">
-                        <img src="svgs/eye-plus-outline.svg" width="25" height="25">
-                        <img src="svgs/share-variant-outline.svg" width="25" height="25">
-                    </div>
-                </div>
+                <div class="main_card_wrapper">
                     <div class="card">
-                    <h3>Impossible App</h3>
-                    <p>Integer mollis neque vitae nibh sagittis euismod. Proin tempor in augue sit amet mattis. Proin nulla ante, dictum non porta et, molestie nec elit.</p>
-                    <div class="icons">
-                        <img src="svgs/star-plus-outline.svg" width="25" height="25">
-                        <img src="svgs/eye-plus-outline.svg" width="25" height="25">
-                        <img src="svgs/share-variant-outline.svg" width="25" height="25">
-                    </div>                
-                </div>
-                    <div class="card">
-                    <h3>Easy Peasy App</h3>
-                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam mauris risus, posuere id rhoncus quis, sagittis ac mauris. Mauris nec gravida dui.</p>
-                    <div class="icons">
-                        <img src="svgs/star-plus-outline.svg" width="25" height="25">
-                        <img src="svgs/eye-plus-outline.svg" width="25" height="25">
-                        <img src="svgs/share-variant-outline.svg" width="25" height="25">
+                        <h3>Super Cool Project</h3>
+                        <p>Sed cursus justo ac lacus efficitur, sit amet convallis lectus ultrices. Suspendisse a ipsum non lorem eleifend pulvinar.</p>
+                        <div class="icons">
+                            <img src="svgs/star-plus-outline.svg" width="25" height="25">
+                            <img src="svgs/eye-plus-outline.svg" width="25" height="25">
+                            <img src="svgs/share-variant-outline.svg" width="25" height="25">
+                        </div>
                     </div>
-                </div>
                     <div class="card">
-                    <h3>Ad Blocker</h3>
-                    <p>Mauris tincidunt lorem ac dui ultricies, vel pellentesque erat vulputate. Donec sollicitudin mauris a odio blandit, sed porta nisl maximus. Mauris fermentum porttitor sodales. Donec facilisis hendrerit semper. Etiam vitae lectus id purus volutpat placerat.</p>
-                    <div class="icons">
-                        <img src="svgs/star-plus-outline.svg" width="25" height="25">
-                        <img src="svgs/eye-plus-outline.svg" width="25" height="25">
-                        <img src="svgs/share-variant-outline.svg" width="25" height="25">
+                        <h3>Less Cool Project</h3>
+                        <p>Aenean eu felis non nunc pretium lacinia. Phasellus pulvinar sollicitudin nisl et cursus. Nullam a sem sit amet felis pretium hendrerit sed porta erat.</p>
+                        <div class="icons">
+                            <img src="svgs/star-plus-outline.svg" width="25" height="25">
+                            <img src="svgs/eye-plus-outline.svg" width="25" height="25">
+                            <img src="svgs/share-variant-outline.svg" width="25" height="25">
+                        </div>
                     </div>
-                </div>
-                    <div class="card">
-                    <h3>Money Maker</h3>
-                    <p>Fusce luctus erat ut vehicula condimentum. Mauris urna ipsum, posuere at erat at, pellentesque elementum diam. In ultrices ultrices consectetur.</p>
-                    <div class="icons">
-                        <img src="svgs/star-plus-outline.svg" width="25" height="25">
-                        <img src="svgs/eye-plus-outline.svg" width="25" height="25">
-                        <img src="svgs/share-variant-outline.svg" width="25" height="25">
+                        <div class="card">
+                        <h3>Impossible App</h3>
+                        <p>Integer mollis neque vitae nibh sagittis euismod. Proin tempor in augue sit amet mattis. Proin nulla ante, dictum non porta et, molestie nec elit.</p>
+                        <div class="icons">
+                            <img src="svgs/star-plus-outline.svg" width="25" height="25">
+                            <img src="svgs/eye-plus-outline.svg" width="25" height="25">
+                            <img src="svgs/share-variant-outline.svg" width="25" height="25">
+                        </div>                
+                    </div>
+                        <div class="card">
+                        <h3>Easy Peasy App</h3>
+                        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam mauris risus, posuere id rhoncus quis, sagittis ac mauris. Mauris nec gravida dui.</p>
+                        <div class="icons">
+                            <img src="svgs/star-plus-outline.svg" width="25" height="25">
+                            <img src="svgs/eye-plus-outline.svg" width="25" height="25">
+                            <img src="svgs/share-variant-outline.svg" width="25" height="25">
+                        </div>
+                    </div>
+                        <div class="card">
+                        <h3>Ad Blocker</h3>
+                        <p>Mauris tincidunt lorem ac dui ultricies, vel pellentesque erat vulputate. Donec sollicitudin mauris a odio blandit, sed porta nisl maximus. Mauris fermentum porttitor sodales. Donec facilisis hendrerit semper. Etiam vitae lectus id purus volutpat placerat.</p>
+                        <div class="icons">
+                            <img src="svgs/star-plus-outline.svg" width="25" height="25">
+                            <img src="svgs/eye-plus-outline.svg" width="25" height="25">
+                            <img src="svgs/share-variant-outline.svg" width="25" height="25">
+                        </div>
+                    </div>
+                        <div class="card">
+                        <h3>Money Maker</h3>
+                        <p>Fusce luctus erat ut vehicula condimentum. Mauris urna ipsum, posuere at erat at, pellentesque elementum diam. In ultrices ultrices consectetur.</p>
+                        <div class="icons">
+                            <img src="svgs/star-plus-outline.svg" width="25" height="25">
+                            <img src="svgs/eye-plus-outline.svg" width="25" height="25">
+                            <img src="svgs/share-variant-outline.svg" width="25" height="25">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -172,32 +174,34 @@
 
                 <div class="trending">
                     <div class="main_titles">Trending</div>
-                    <div class="trend_card">
-                        <img src="svgs/dog.svg" width="50" height="50">
-                        <div class="at">
-                            <h4>@tegan</h4>
-                            <p>World Peace Builder</p>
+                    <div class="trend_wrapper">
+                        <div class="trend_card">
+                            <img src="svgs/dog.svg" width="50" height="50">
+                            <div class="at">
+                                <h4>@tegan</h4>
+                                <p>World Peace Builder</p>
+                            </div>
+                        </div>                
+                        <div class="trend_card">
+                            <img src="svgs/face-woman-profile.svg" width="50" height="50">
+                            <div class="at">
+                                <h4>@morgan</h4>
+                                <p>Super Cool Project</p>
+                            </div>
                         </div>
-                    </div>                
-                    <div class="trend_card">
-                        <img src="svgs/face-woman-profile.svg" width="50" height="50">
-                        <div class="at">
-                            <h4>@morgan</h4>
-                            <p>Super Cool Project</p>
+                        <div class="trend_card">
+                            <img src="svgs/chart-donut.svg" width="50" height="50">
+                            <div class="at">
+                                <h4>@kendall</h4>
+                                <p>Life Changing App</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="trend_card">
-                        <img src="svgs/chart-donut.svg" width="50" height="50">
-                        <div class="at">
-                            <h4>@kendall</h4>
-                            <p>Life Changing App</p>
-                        </div>
-                    </div>
-                    <div class="trend_card">
-                        <img src="svgs/heart-broken-outline.svg" width="50" height="50">
-                        <div class="at">
-                            <h4>@alex</h4>
-                            <p>No Traffic Maker</p>
+                        <div class="trend_card">
+                            <img src="svgs/heart-broken-outline.svg" width="50" height="50">
+                            <div class="at">
+                                <h4>@alex</h4>
+                                <p>No Traffic Maker</p>
+                            </div>
                         </div>
                     </div>
                 </div>
